# formations_neurones

./: .gitignore
s11/langChainTest/: main.py
s11/llm_js/: index.html
s12/agent_langchain/: Untitled.ipynb
s12/chat_langChain/: chat_langhain.ipynb
s12/chatbot_langchain/: 0.2.27  Untitled.ipynb
s12/latest_ai_development/: report.md
s12/mon_projet_crewai_fastapi/: ai_content.txt  index.html
s12/pront-ix-ai_agent_lead_generation/: pyproject.toml
s12/prospect-ia/backend/: pyproject.toml
s12/prospect-ia/backend/app/: main.py
s12/prospect-ia/backend/app/api/routes/: prospects.py
s12/prospect-ia/backend/app/crew_ai/: report.md
s12/prospect-ia/backend/app/crew_ai/src/ai_agent_crew/: crew.py  crew_runner.py  main.py
s12/prospect-ia/backend/app/crew_ai/src/ai_agent_crew/config/: tasks.yaml
s12/prospect-ia/backend/app/models/: prospect.py
s12/prospect-ia/backend/app/services/: crew_services.py
s12/rag_langchain/: Untitled.ipynb  rag2.ipynb
s13/docker_php/: Dockerfile  index.php
s13/docker_test/: Dockerfile  index.html
s13/mon-app-compose/: docker-compose.yml
s13/mon_projet_laravel/: Dockerfile  docker-compose.yml
s13/my_project_symfony/: Dockerfile  docker-compose.yml
s13/myadmin/: docker-compose.yml
s13/todolist-backend/: app.js  db.js  package-lock.json  package.json
s14/docker/: compose.yml
s14/rag-fastapi/: requirements.txt
s14/spring/: Dockerfile  compose.yml  pom.xml
s15/laravel-mcp/: Dockerfile  compose.yml  docker-entrypoint.sh
s15/product-api/: Dockerfile  compose.yml  package-lock.json  package.json
(+337 files in other folders)
