[project]
name = "prospecta-backend"
version = "0.1.0"
description = "Backend FastAPI pour Prospecta AI"
authors = [{ name = "Honore", email = "honore@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.6.0",
    "crewai[tools]>=0.141.0,<1.0.0"
]

[project.scripts]
start = "app.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
